<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/bitlab_purple1"
        android:id="@+id/form_fragment_layout"
             tools:context=".FormFragment">


    <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp" app:srcCompat="@drawable/image_bitlab_logo"
            android:id="@+id/imageView" android:layout_marginTop="23dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="94dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="97dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.099"
            android:contentDescription="@string/form_fragment_image_content_description" />
    <TextView
            android:text="@string/form_fragment_text"
            style="@style/AppTheme.txt_info"
            android:fontFamily="@font/unispace"
            android:layout_width="324dp"
            android:layout_height="50dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="43dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:layout_marginBottom="40dp"
    />
    <TextView
            android:text="@string/form_fragment_name"
            style="@style/AppTheme.txt_description"

            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/edit_txt_name"
            android:fontFamily="@font/roboto"/>
    <EditText
            style="@style/AppTheme.edit_txt"
            android:ems="10"
            android:id="@+id/edit_txt_name"
            android:inputType="textPersonName"
            android:hint="@string/form_fragment_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.485" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <EditText

            android:inputType="textEmailAddress"
            style="@style/AppTheme.edit_txt"
            android:hint="@string/form_fragment_email_placeholder"
            android:ems="10"
            android:id="@+id/edit_txt_email"
            app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/form_fragment_telephone"
            style="@style/AppTheme.txt_description"
            android:layout_width="125dp"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/edit_txt_telephone" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="240dp"/>
    <EditText
            android:inputType="phone"
            style="@style/AppTheme.edit_txt"
            android:hint="@string/form_fragment_telephone_placeholder"
            android:ems="10"
            android:id="@+id/edit_txt_telephone"
            app:layout_constraintBottom_toTopOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/form_fragment_question"
            style="@style/AppTheme.txt_description"
            android:layout_width="190dp"
            android:layout_marginEnd="179dp"
            android:id="@+id/textView5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_options" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="42dp"/>
    <TextView
            android:text="@string/form_fragment_email"
            style="@style/AppTheme.txt_description"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/edit_txt_email"/>

    <Button
            android:id="@+id/btn_send"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="97dp"
            android:background="@drawable/input_radius_button"
            android:text="@string/form_fragment_send"
            android:textColor="@color/bitlab_purple1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

    <Spinner

            android:id="@+id/spinner_options"
            style="@style/AppTheme.spinner"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="48dp"
            android:popupBackground="@color/bitlab_purple1"
            android:prompt="@string/form_fragment_spinner_text"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/btn_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <TextView
            android:id="@+id/txt_check_collection"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="31dp"

            android:fontFamily="@font/roboto"
            android:text="@string/form_fragment_see_collection"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_send" />






</androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/form_fragment_result_layout"
            android:visibility="gone"
            >

        <ImageView
                android:src="@drawable/ic_check_circle_black_24dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="244dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="65dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/form_fragment_image_content_description" />
        <TextView
                android:text="@string/collection_view_text"
                android:textColor="@color/bitlab_purple1"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="81dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="259dp"
                app:layout_constraintHorizontal_bias="0.55"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>