<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"

        android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView

            android:layout_width="match_parent"

            android:layout_height="205dp"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="30dp"
            android:elevation="2dp"
            app:cardCornerRadius="10dp"

            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/cardview_radius"
                android:id="@+id/item_container_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.45" />

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_view_user"
                    android:layout_width="116dp"
                    android:layout_height="101dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@android:color/black"
                    android:src="@drawable/github_neko"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="51dp"
                    android:layout_marginEnd="215dp"
                    android:layout_marginBottom="53dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.496"
                     />

            <TextView
                    android:id="@+id/txt_name"
                    style="@style/AppTheme.txt_main_fields"
                    android:layout_width="150dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/collection_view_john_doe_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/txt_email"
                    style="@style/AppTheme.txt_main_fields"
                    android:layout_width="110dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="85dp"
                    android:text="@string/form_fragment_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <TextView
                    android:id="@+id/txt_user_email"
                    style="@style/AppTheme.txt_secondary_fields"
                    android:layout_width="153dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="42dp"
                    android:text="@string/collection_view_john_doe_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toBottomOf="@+id/txt_email" />

            <TextView
                    android:id="@+id/txt_telephone"
                    style="@style/AppTheme.txt_main_fields"
                    android:layout_width="105dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="90dp"
                    android:text="@string/form_fragment_telephone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_email" />

            <TextView
                    android:id="@+id/txt_user_telephone"
                    style="@style/AppTheme.txt_secondary_fields"
                    android:layout_width="153dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="42dp"
                    android:text="@string/collection_view_john_doe_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toBottomOf="@+id/txt_telephone" />

            <TextView
                    android:id="@+id/txt_found_by"
                    style="@style/AppTheme.txt_main_fields"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/collection_view_found_by"

                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_view_user"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_telephone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>